# Auxiliary-math-library-for-game-development

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Test.cpp  library.cpp  library.h  main.cpp
.github/workflows/: ci.yml  clang-format-check.yml
benchmarks/: matrix4x4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
include/: concepts.hpp  ksemath.hpp  matrix4x4.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/math/: vector2.hpp  vector3.hpp  vector4.hpp
tests/: matrix4x4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
